History of this buildout
========================

NOTE: This is now a maintenance branch as long as Minaraad is still
hosted by Zest.  Trunk (4.x) will be used in Belgium on the LNE
servers, using RelStorage.  Any changes done in this maintenance
branch must be ported to trunk as well.


3.30 (unreleased)
-----------------

- When creating an advisory from a project, use the delivery date as
  the main date, instead of the advisory date.
  Fixes http://projects.zestsoftware.nl/mina-raad/issues/21
  [maurits]


3.29 (2011-11-14)
-----------------

- zserver-threads = 3
  [maurits]


3.28 (2011-11-10)
-----------------

- Completely removed old startdate and enddate fields from Hearing and
  MREvent, as they were only confusing.  Also removed the migration
  code and tests related to those fields.
  [maurits]

- Replaced remaining context.enddate usage with context.get_end_time().
  [maurits]

- Replaced remaining context.startdate usage with context.getStart_time().
  [maurits]

- Replaced remaining getStartdate calls with getStart_time.
  [maurits]

- Replaced remaining getEnddate calls with get_end_time.
  [maurits]


3.27 (2011-11-09)
-----------------

- Avoid UnicodeDecodeError when exporting subscribers.
  [maurits]

- Fixed AttributeError when deleting a normal file from a meeting.
  Normal files do not have a contains_pdf method.
  [maurits]


3.26 (2011-10-24)
-----------------

- Fixed Unauthorized error when displaying a list of relatedDocuments
  that the user does not have access to.
  [maurits]


3.25 (2011-10-18)
-----------------

- Re-enable and improve the duplicate users check from the minaraad
  service panel.
  [maurits]


3.24 (2011-10-18)
-----------------

- Added migration step to fix double invitees.
  [maurits]

- Make get_file_brains more efficient by not getting objects.
  [maurits]

- Add Council member to the View meeting in digibib in the rolemap.xml.
  [jladage]


3.23 (2011-10-17)
-----------------
